create addresses-card page.added section other-services

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -12,8 +12,8 @@
 	<!-- 	<meta name="description"
 		content=""> -->
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
-	<title>2ATM | Наши адреса</title>
-	<link rel="stylesheet" href="./styles/addresses-page/addresses.css">
+	<title>2ATM | Описание адреса</title>
+	<link rel="stylesheet" href="./styles/addresses-card-page/addresses-card.css">
 </head>
 
 
@@ -174,7 +174,7 @@
 	</header>
 
 	<main class="content">
-		<h1 class="visually-hidden">Адреса мастерских 2АТМ</h1>
+		<h1 class="visually-hidden">Описание одреса сервиса 2АТМ</h1>
 
 		<section class="page-heading container" aria-labelledby="page-title">
 			<nav class="page-heading__breadcrumbs">
@@ -201,40 +201,7 @@
 				Карта с адресами мастерских 2АТМ
 			</h2>
 
-			<form class="locations__filter locations-filter hidden-laptop" id="home-page-location-filter">
-				<fieldset class="locations-filter__border">
-					<legend class="visually-hidden">
-						Фильтр для выбора шиномантажа по его характеристикам
-					</legend>
-
-					<div class="locations-filter__element">
-						<input class="locations-filter__input" type="radio" id="refresh-conditioners" name="filter-feature"
-							value="refresh-conditioners">
-						<label for="refresh-conditioners">Заправка кондиционера</label>
-					</div>
-
-					<div class="locations-filter__element">
-						<input class="locations-filter__input" type="radio" id="service-station" name="filter-feature"
-							value="service-station">
-						<label for="service-station">Сервис</label>
-					</div>
-
-					<div class="locations-filter__element">
-						<input class="locations-filter__input" type="radio" id="washing" name="filter-feature" value="washing">
-						<label for="washing">Мойка</label>
-					</div>
-
-					<div class="locations-filter__element">
-						<input class="locations-filter__input" type="radio" id="tire-fitting" name="filter-feature"
-							value="tire-fitting">
-						<label for="tire-fitting">Шиномонтаж</label>
-					</div>
-				</fieldset>
-
-			</form>
-
 			<div class="locations__body">
-
 				<ul class="locations__list">
 					<li class="locations__list-item locations__list-item--search">
 						<form class="search" id="location-search">
@@ -262,8 +229,7 @@
 
 							<div class="location-card__body">
 								<h4 class="location-card__address">
-									<a class="location-card__address-button h5" href="./addresses-card.html"
-										data-js-location-card-address>
+									<a class="location-card__address-button h5" href="/addresses-card.html" data-js-location-card-address>
 										Муринская дорога, д. 24
 									</a>
 								</h4>
@@ -316,8 +282,7 @@
 
 							<div class="location-card__body">
 								<h4 class="location-card__address">
-									<a class="location-card__address-button h5" href="./addresses-card.html"
-										data-js-location-card-address>
+									<a class="location-card__address-button h5" href="/addresses-card.html" data-js-location-card-address>
 										Муринская дорога, д. 24
 									</a>
 								</h4>
@@ -370,8 +335,7 @@
 
 							<div class="location-card__body">
 								<h4 class="location-card__address">
-									<a class="location-card__address-button h5" href="./addresses-card.html"
-										data-js-location-card-address>
+									<a class="location-card__address-button h5" href="/addresses-card.html" data-js-location-card-address>
 										Муринская дорога, д. 24
 									</a>
 								</h4>
@@ -424,8 +388,7 @@
 
 							<div class="location-card__body">
 								<h4 class="location-card__address">
-									<a class="location-card__address-button h5" href="./addresses-card.html"
-										data-js-location-card-address>
+									<a class="location-card__address-button h5" href="/addresses-card.html" data-js-location-card-address>
 										Муринская дорога, д. 24
 									</a>
 								</h4>
@@ -478,8 +441,7 @@
 
 							<div class="location-card__body">
 								<h4 class="location-card__address">
-									<a class="location-card__address-button h5" href="./addresses-card.html"
-										data-js-location-card-address>
+									<a class="location-card__address-button h5" href="/addresses-card.html" data-js-location-card-address>
 										Муринская дорога, д. 24
 									</a>
 								</h4>
@@ -537,50 +499,7 @@
 			</div>
 		</section>
 
-		<section class="app-entry container section section--big-margin" aria-labelledby="app-entry-title">
-			<h2 class="visually-hidden">Новый формат записи через приложение Telegram</h2>
-
-			<div class="app-entry__wrapper">
-
-
-				<h3 class="app-entry__title" id="app-entry-title">
-					Новый формат записи через приложение Telegram
-				</h3>
-
-
-				<picture class="app-entry__image-wrapper">
-					<source srcset="./images/app-entry/app-entry-mobile.webp" media="(max-width: 1300px)" type="image/webp">
-					<source srcset="./images/app-entry/app-entry.webp 1x , ./images/app-entry/app-entry@2x.webp 2x"
-						type="image/webp">
-					<img class="app-entry__image" src="./images/app-entry/app-entry-mobile.webp"
-						alt="Радостная женщина с телефоном" width="308" height="308" loading="lazy">
-				</picture>
-
-				<div class="app-entry__text">
-					<p>
-						Записывайтесь на&nbsp;шиномонтаж, автомойку и&nbsp;на&nbsp;сервис через нашего бота в&nbsp;телеграм.
-					</p>
-
-					<p>
-						Просто выберите необходимую услугу и&nbsp;подходящее время. Отменить запись можно так&nbsp;же легко.
-					</p>
-
-					<p>
-						Экономьте время и&nbsp;оцените удобство новой записи уже сейчас!
-					</p>
-				</div>
-
-				<a class="app-entry__button button button--entry-tg" href="https://telegram.org/" target="_blank">
-					<svg class="button__icon button__icon--tg" width="29" height="24" viewBox="0 0 29 24">
-						<use xlink:href="./images/icons/sprite-icons.svg#telegram-icon"></use>
-					</svg>
-
-					<span>Запись через Telegram</span>
-				</a>
-			</div>
-		</section>
-
-		<section class="advantages section section--big-to-small-margin container" aria-labelledby="advantages-title">
+		<section class="advantages section section--big-margin container" aria-labelledby="advantages-title">
 			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
@@ -652,7 +571,117 @@
 			</div>
 		</section>
 
-		<section class="appointment-choose section container" aria-labelledby="appointment-choose-title">
+		<section class="other-services section section--big-margin container" aria-labelledby="other-services-title">
+			<h2 class="section__title h3" id="other-services-title">
+				Другие услуги
+			</h2>
+
+			<ul class="other-services__list">
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о шиномонтаже">
+
+						<img class="other-service-card__image" src="./images/icons/icon-tire-fitting.webp" width="60" height="60"
+							alt="Колесо" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Шиномонтаж
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее об автомойке">
+
+						<img class="other-service-card__image" src="./images/icons/icon-car-wash.webp" width="60" height="60"
+							alt="Машина с каплями" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Автомойка
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о СТО ремонте">
+
+						<img class="other-service-card__image" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+							alt="Шестерёнка" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							СТО ремонт
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о техосмотре">
+
+						<img class="other-service-card__image" src="./images/icons/icon-technical-inspection.webp" width="60"
+							height="60" alt="Технический осмотр автомобиля" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Техосмотр
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о заправке кондиционеров">
+
+						<img class="other-service-card__image" src="./images/icons/icon-refill-conditioning.webp" width="60"
+							height="60" alt="Заправка кондиционера" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Заправка кондиционера
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+
+				<li class="other-services__list-item other-service-card">
+					<a class="other-service-card__link" href="#!" aria-label="Перейти к описанию услуги"
+						title="Подробее о развале-схождении">
+
+						<img class="other-service-card__image" src="./images/icons/icon-wheel-alignment.webp" width="60" height="60"
+							alt="Развал-схождение" loading="lazy">
+
+						<h3 class="other-service-card__name">
+							Развал-схождение
+						</h3>
+
+						<span class="other-service-card__link-text">
+							Подробнее
+						</span>
+					</a>
+				</li>
+			</ul>
+		</section>
+
+		<section class="other-services section container" aria-labelledby="other-services-title">
 			<h2 class="visually-hidden">Выбор способа записи в мастерскую 2АТМ</h2>
 
 			<div class="appointment-choose__wrapper">
@@ -848,7 +877,6 @@
 
 	</script>
 
-	<!-- <script type="module" src="./js/develop/index.js"></script> -->
 
 </body>
 
