--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
 								<div class="location-card__body">
 									<h4 class="location-card__address">
-										<a class="location-card__address-button h5" href="/addresses-card.html"
+										<a class="location-card__address-button h5" href="./addresses-card.html"
 											data-js-location-card-address>
 											Муринская дорога, д. 24
 										</a>
@@ -650,7 +650,7 @@
 
 								<div class="location-card__body">
 									<h4 class="location-card__address">
-										<a class="location-card__address-button h5" href="/addresses-card.html"
+										<a class="location-card__address-button h5" href="./addresses-card.html"
 											data-js-location-card-address>
 											Муринская дорога, д. 24
 										</a>
@@ -704,7 +704,7 @@
 
 								<div class="location-card__body">
 									<h4 class="location-card__address">
-										<a class="location-card__address-button h5" href="/addresses-card.html"
+										<a class="location-card__address-button h5" href="./addresses-card.html"
 											data-js-location-card-address>
 											Муринская дорога, д. 24
 										</a>
@@ -758,7 +758,7 @@
 
 								<div class="location-card__body">
 									<h4 class="location-card__address">
-										<a class="location-card__address-button h5" href="/addresses-card.html"
+										<a class="location-card__address-button h5" href="./addresses-card.html"
 											data-js-location-card-address>
 											Муринская дорога, д. 24
 										</a>
@@ -812,7 +812,7 @@
 
 								<div class="location-card__body">
 									<h4 class="location-card__address">
-										<a class="location-card__address-button h5" href="/addresses-card.html"
+										<a class="location-card__address-button h5" href="./addresses-card.html"
 											data-js-location-card-address>
 											Муринская дорога, д. 24
 										</a>
@@ -2061,7 +2061,6 @@
 		});
 
 	</script>
-	<!-- <script type="module" src="./js/develop/index.js"></script> -->
 
 </body>
 
