added section address-info. page address-card

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/svg+xml" sizes="32x32" href="./images/icons/favicon.svg">
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
-	<!-- 	<meta name="description"
-		content=""> -->
+	<meta name="description"
+		content="Автосервис 2ATM: срочный шиномонтаж и автомойка 24/7. Качественное оборудование, опытные мастера, онлайн-запись. Выгодные цены без скрытых платежей.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Описание адреса</title>
 	<link rel="stylesheet" href="./styles/addresses-card-page/addresses-card.css">
@@ -47,7 +47,7 @@
 		<div class="header__general header__general--not-to-scroll container">
 			<a class="header__logo logo" href="./index.html" aria-label="Логотип 2ATM">
 				<picture>
-					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 767px)" type="image/svg+xml">
+					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 1024px)" type="image/svg+xml">
 					<source srcset="./images/logo/logo.svg" type="image/svg+xml">
 					<img class="logo__image" src="./images/logo/logo-mobile.svg" width="273" height="58" alt="Логотип 2ATM">
 				</picture>
@@ -196,7 +196,7 @@
 			</h2>
 		</section>
 
-		<section class="locations container section">
+		<section class="locations container section section--margin-to-medium">
 			<h2 class="visually-hidden">
 				Карта с адресами мастерских 2АТМ
 			</h2>
@@ -499,7 +499,261 @@
 			</div>
 		</section>
 
-		<section class="advantages section section--big-margin container" aria-labelledby="advantages-title">
+		<section class="address-info container section section--margin-to-medium" aria-labelledby="address-info-title">
+			<h2 class="address-info__title section__title h3" id="address-info-title">
+				Шиномонтаж и автомойка 24/7 в Кудрово
+			</h2>
+
+			<div class="address-info__body">
+				<section class="address-info__svc-contacts svc-contacts">
+					<h3 class="address-info__block-name">
+						<img class="address-info__block-name-icon" src="./images/icons/icon-repairer.webp" width="60" height="60"
+							alt="Колесо" loading="lazy">
+
+						<span>Контакты</span>
+					</h3>
+
+					<address>
+						<ul class="svc-contacts__list">
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-marker"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">адрес</span>
+								<span class="svc-contacts__item-text">
+									Кудрово, Ленинградская ул., д. 9/8
+								</span>
+							</li>
+
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-phone"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">телефон</span>
+								<a class="svc-contacts__item-text svc-contacts__item-text--phone-number" href="tel:78123855054"
+									target="_blank">
+									+7 (812) 385-50-54
+								</a>
+							</li>
+
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-phone"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">телефон мастерской</span>
+
+								<p
+									onclick="this.firstElementChild.style.display = 'none';this.children[1].classList.remove('visually-hidden');">
+									<span class="svc-contacts__item-text svc-contacts__item-text--underline">Показать</span>
+									<span class="visually-hidden svc-contacts__item-text svc-contacts__item-text--phone-number">+7 (812)
+										385-50-54</span>
+								</p>
+							</li>
+
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-clock"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">режим работы</span>
+								<span class="svc-contacts__item-text">круглосуточно</span>
+							</li>
+
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-map"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">как добраться</span>
+								<a class="svc-contacts__item-text svc-contacts__item-text--underline" href="#!">
+									Посмотреть схему
+								</a>
+							</li>
+
+							<li class="svc-contacts__item">
+								<svg class="svc-contacts__item-icon" width="24" height="24" viewBox="0 0 24 24">
+									<use xlink:href="./images/icons/sprite-icons.svg#address-icon-navigate"></use>
+								</svg>
+
+								<span class="svc-contacts__item-label">построить маршрут</span>
+								<a class="svc-contacts__item-text svc-contacts__item-text--underline" href="#!">
+									Яндекс.Навигатор
+								</a>
+							</li>
+						</ul>
+					</address>
+				</section>
+
+				<section class="address-info__svc-catalog svc-catalog">
+					<h3 class="address-info__block-name svc-catalog__title">
+						<img class="address-info__block-name-icon" src="./images/icons/icon-сar-rapair.webp" width="60" height="60"
+							alt="Колесо" loading="lazy">
+
+						<span>Услуги</span>
+					</h3>
+
+					<nav class="service">
+						<ul class="svc-catalog__list service__list">
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Шиномонтаж 24&nbsp;часа</span>
+								</a>
+							</li>
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Ремонт шин</span>
+								</a>
+							</li>
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Покраска дисков</span>
+								</a>
+							</li>
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Ремонт дисков</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Балансировка колес</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Аргоновая сварка</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Ошиповка шин</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Сезонное хранение шин</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Автомойка</span>
+								</a>
+							</li>
+
+							<li class="service__list-item">
+								<a class="service__link service__link--arrow" href="#!">
+									<span>Заправка<br>кондиционеров</span>
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</section>
+
+				<address class="address-info__qs-line">
+					<a class="address-info__qs-line-link" href="tel:88126482248" target="_blank"
+						title="Связаться с линией контроля качества">
+						<span class="address-info__qs-line-phone">8&nbsp;812 648-22-48</span>
+						<span class="address-info__qs-line-text">линия контроля качества обслуживания клиентов</span>
+					</a>
+				</address>
+
+				<div class="address-info__buttons">
+					<button class="address-info__button button button--accent-bg " type="button">
+						Записаться на сайте
+					</button>
+
+					<a class="address-info__button button button--light-bg-color " href="#!" target="_blank">
+						Записаться через Telegram
+					</a>
+
+					<div class="address-info__buttons-note">
+						<p>
+							Быстрее через Telegram.<br> Всего 5&nbsp;простых шагов&nbsp;&mdash; займёт меньше минуты.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="address-info__gallery address-info-gallery">
+				<div class="address-info-gallery__prev-slide hidden-mobile" title="Предыдущий слайд"></div>
+
+				<div class="address-info-gallery__slider">
+					<ul class="swiper-wrapper">
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-1.webp" width="200" height="130"
+								alt="Ремонт шины" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-2.webp" width="200" height="130"
+								alt="Инструменты шиномантажа" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-3.webp" width="200" height="130"
+								alt="Планшет с возможностью онлайн записи" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-4.webp" width="200" height="130"
+								alt="Балансировка" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-5.webp" width="200" height="130"
+								alt="Установка колеса" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-1.webp" width="200" height="130"
+								alt="Ремонт шины" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-2.webp" width="200" height="130"
+								alt="Инструменты шиномантажа" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-3.webp" width="200" height="130"
+								alt="Планшет с возможностью онлайн записи" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-4.webp" width="200" height="130"
+								alt="Балансировка" loading="lazy">
+						</li>
+
+						<li class="address-info-gallery__image-wrapper swiper-slide">
+							<img class="address-info-gallery__image"
+								src="./images/address-info-gallery/address-info-gallery-image-5.webp" width="200" height="130"
+								alt="Установка колеса" loading="lazy">
+						</li>
+					</ul>
+				</div>
+
+				<div class="address-info-gallery__next-slide hidden-mobile" title="Следующий слайд"></div>
+			</div>
+		</section>
+
+		<section class="advantages section section--big-to-small-margin container" aria-labelledby="advantages-title">
 			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
@@ -860,6 +1114,21 @@
 	<script src="./libs/swiper/swiper-bundle.min.js"></script>
 
 	<script>
+		const addressInfoSlider = new Swiper(".address-info-gallery__slider", {
+			slidesPerView: "auto",
+			spaceBetween: 10,
+
+			breakpoints: {
+				768: {
+					spaceBetween: 24,
+					navigation: {
+						nextEl: ".address-info-gallery__next-slide",
+						prevEl: ".address-info-gallery__prev-slide",
+					},
+				},
+			},
+			grabCursor: true
+		});
 
 		const ourAdvantagesSlider = new Swiper(".advantages__slider", {
 			slidesPerView: "auto",
@@ -874,9 +1143,7 @@
 			},
 			grabCursor: true
 		});
-
 	</script>
-
 
 </body>
 
