--- a/addresses.html
+++ b/addresses.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/svg+xml" sizes="32x32" href="./images/icons/favicon.svg">
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
-	<!-- 	<meta name="description"
-		content=""> -->
+	<meta name="description"
+		content="Автосервис 2ATM: срочный шиномонтаж и автомойка 24/7. Качественное оборудование, опытные мастера, онлайн-запись. Выгодные цены без скрытых платежей.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Наши адреса</title>
 	<link rel="stylesheet" href="./styles/addresses-page/addresses.css">
@@ -47,7 +47,7 @@
 		<div class="header__general header__general--not-to-scroll container">
 			<a class="header__logo logo" href="./index.html" aria-label="Логотип 2ATM">
 				<picture>
-					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 767px)" type="image/svg+xml">
+					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 1024px)" type="image/svg+xml">
 					<source srcset="./images/logo/logo.svg" type="image/svg+xml">
 					<img class="logo__image" src="./images/logo/logo-mobile.svg" width="273" height="58" alt="Логотип 2ATM">
 				</picture>
@@ -196,7 +196,7 @@
 			</h2>
 		</section>
 
-		<section class="locations container section">
+		<section class="locations container section section--margin-to-medium">
 			<h2 class="visually-hidden">
 				Карта с адресами мастерских 2АТМ
 			</h2>
@@ -580,8 +580,8 @@
 			</div>
 		</section>
 
-		<section class="advantages section section--big-to-small-margin container" aria-labelledby="advantages-title">
-			<h2 class="advantages__title section__title h3" id="advantages-title">
+		<section class="advantages section section--big-to-medium-margin container" aria-labelledby="advantages-title">
+			<h2 class="section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
 
