--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="header__general header__general--not-to-scroll container">
 			<a class="header__logo logo" href="./index.html" aria-label="Логотип 2ATM">
 				<picture>
-					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 767px)" type="image/svg+xml">
+					<source srcset="./images/logo/logo-mobile.svg" media="(max-width: 1024px)" type="image/svg+xml">
 					<source srcset="./images/logo/logo.svg" type="image/svg+xml">
 					<img class="logo__image" src="./images/logo/logo-mobile.svg" width="273" height="58" alt="Логотип 2ATM">
 				</picture>
@@ -233,7 +233,7 @@
 			</div>
 		</section>
 
-		<section class="overview-services container" aria-labelledby="services-title-home-page">
+		<section class="overview-services section container" aria-labelledby="services-title-home-page">
 			<h2 class="visually-hidden" id="services-title-home-page">Актуальные услуги на сайте две атмосферы</h2>
 			<section class="overview-services__services-menu services-menu hidden-mobile">
 				<h3 class="visually-hidden">Навигация по услугам сайта две атмосферы</h3>
@@ -494,7 +494,7 @@
 			</section>
 		</section>
 
-		<section class="messenger-action container hidden-tablet" aria-labelledby="messenger-action-title">
+		<section class="messenger-action section container hidden-tablet" aria-labelledby="messenger-action-title">
 			<h2 class="visually-hidden">Быстрая запись в Telegram-боте</h2>
 
 			<div class="messenger-action__wrapper">
@@ -882,7 +882,7 @@
 			</div>
 		</section>
 
-		<section class="special-offers section container" aria-labelledby="special-offers-title">
+		<section class="special-offers section section--big-margin container" aria-labelledby="special-offers-title">
 			<h2 class="section__title h3" id="special-offers-title">
 				Специальные предложения
 			</h2>
@@ -950,7 +950,7 @@
 			</ul>
 		</section>
 
-		<section class="reviews section container" aria-labelledby="reviews-title">
+		<section class="reviews section section--big-margin container" aria-labelledby="reviews-title">
 			<h2 class="reviews__title section__title h3" id="reviews-title">
 				<svg class="reviews__title-icon" width="37" height="36" viewBox="0 0 37 36">
 					<use xlink:href="./images/icons/sprite-icons.svg#yandex-icon"></use>
@@ -1488,7 +1488,7 @@
 			</div>
 		</section>
 
-		<section class="our-clients section container" aria-labelledby="our-clients-title">
+		<section class="our-clients section section--big-margin container" aria-labelledby="our-clients-title">
 			<h2 class="section__title h3" id="our-clients-title">
 				Наши клиенты
 			</h2>
@@ -1528,7 +1528,7 @@
 			</div>
 		</section>
 
-		<section class="advantages section container" aria-labelledby="advantages-title">
+		<section class="advantages section section--big-margin container" aria-labelledby="advantages-title">
 			<h2 class="section__title h3" id="advantages-title">
 				Почему клиенты выбирают именно нас?
 			</h2>
@@ -1614,7 +1614,7 @@
 
 		</section>
 
-		<section class="certificates section container" aria-labelledby="certificates-title">
+		<section class="certificates section section--margin-to-medium container" aria-labelledby="certificates-title">
 			<h2 class="section__title h3" id="certificates-title">
 				Сертификаты наших мастеров
 			</h2>
