create corporate page. added section promo

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -13,7 +13,7 @@
 		content="Автосервис 2ATM: срочный шиномонтаж и автомойка 24/7. Качественное оборудование, опытные мастера, онлайн-запись. Выгодные цены без скрытых платежей.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Описание адреса</title>
-	<link rel="stylesheet" href="./styles/addresses-card-page/addresses-card.css">
+	<link rel="stylesheet" href="./styles/pages/addresses-card-page/addresses-card.css">
 </head>
 
 
@@ -75,7 +75,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./corporate.html">
 									Корпоративным клиентам
 								</a>
 							</li>
@@ -180,7 +180,7 @@
 			<nav class="page-heading__breadcrumbs">
 				<ul class="page-heading__breadcrumbs-list">
 					<li class="page-heading__breadcrumbs-item">
-						<a class="page-heading__breadcrumbs-link" href="/index.html">Главная</a>
+						<a class="page-heading__breadcrumbs-link" href="./index.html">Главная</a>
 					</li>
 
 					<li class="page-heading__breadcrumbs-item">
@@ -1011,7 +1011,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Корпоративным клиентам</a>
+						<a class="footer__links-link" href="./corporate.html">Корпоративным клиентам</a>
 					</li>
 
 					<li>
