--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		content="Сеть автосервисов 2ATM в Санкт-Петербурге: шиномонтаж, развал-схождение, ТО, заправка кондиционеров. Запись через сайт или Telegram.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Главная</title>
-	<link rel="stylesheet" href="./styles/index-page/index.css ">
+	<link rel="stylesheet" href="./styles/pages/index-page/index.css ">
 </head>
 
 
@@ -32,7 +32,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="#!">
+					<a class="header-top-menu__link" href="./corporate.html">
 						Корпоративным клиентам
 					</a>
 				</li>
@@ -75,7 +75,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./corporate.html">
 									Корпоративным клиентам
 								</a>
 							</li>
@@ -177,6 +177,7 @@
 		<h1 class="visually-hidden">Главная страница сайта две атмосферы</h1>
 
 		<section class="promo" aria-labelledby="promo-title">
+			<h2 class="visually-hidden">Быстрый шиномонтаж, сервис и мойка без очередей</h2>
 			<div class="promo__background">
 				<div class="promo__background-wrapper container-big">
 					<img class="promo__decor-image promo__decor-image--left hidden-tablet" src="./images/promo/wheel.webp"
@@ -189,9 +190,9 @@
 
 			<div class="promo__inner container">
 				<div class="promo__body">
-					<h2 class="promo__title h1" id="promo-title">
+					<h3 class="promo__title h1" id="promo-title">
 						Быстрый шиномонтаж, сервис и&nbsp;мойка без очередей
-					</h2>
+					</h3>
 
 					<div class="promo__subtitle">
 						<p>
@@ -1902,7 +1903,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Корпоративным клиентам</a>
+						<a class="footer__links-link" href="./corporate.html">Корпоративным клиентам</a>
 					</li>
 
 					<li>
